fix: add padding right to prevent the text from overlapping the icon

--- a/styles/EntryInterface.module.scss
+++ b/styles/EntryInterface.module.scss
@@ -34,7 +34,7 @@
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
-        padding-right: 2rem;
+        padding-right: 3rem;
 
         &::-ms-expand {
           display: none;
